--- a/tawk_to.links.menu.yml
+++ b/tawk_to.links.menu.yml
@@ -1,5 +1,5 @@
 tawk_to.help:
-  title: 'TawkTo'
+  title: 'Tawk.to'
   route_name: tawk_to.widget
   menu_name: admin
   parent: system.admin_config
