--- a/tawk_to.services.yml
+++ b/tawk_to.services.yml
@@ -1,4 +1,4 @@
 services:
   tawk_to.access_control_handler:
     class: Drupal\tawk_to\Service\TawkToAccessControlHandler
-    arguments: ['@config.factory', '@plugin.manager.condition']
+    arguments: ['@config.factory', '@context.handler', '@context.repository', '@plugin.manager.condition']
