Tawk.to - Drupal 8:
1) Base code refactoring.
2) Updated in config names.
3) Added travis integration.

--- a/tawk_to.routing.yml
+++ b/tawk_to.routing.yml
@@ -9,7 +9,7 @@ tawk_to.index:
 tawk_to.widget:
   path: '/admin/config/tawk_to/widget'
   defaults:
-    _controller: '\Drupal\tawk_to\Controller\TawkToWidgetController::content'
+    _controller: '\Drupal\tawk_to\Controller\TawkToWidgetController::widgetsContent'
     _title: 'Tawk.to - Widget'
   requirements:
     _permission: 'administer tawk_to settings'
