--- a/tawk_to.services.yml
+++ b/tawk_to.services.yml
@@ -2,3 +2,6 @@ services:
   tawk_to.access_control_handler:
     class: Drupal\tawk_to\Service\TawkToAccessControlHandler
     arguments: ['@config.factory', '@context.handler', '@context.repository', '@plugin.manager.condition']
+  tawk_to.embed_render:
+    class: Drupal\tawk_to\Service\TawkToEmbedRender
+    arguments: ['@config.factory', '@tawk_to.access_control_handler']
