Tawk.to - Drupal 8:
Moved project configuration to Web services section.

--- a/tawk_to.info.yml
+++ b/tawk_to.info.yml
@@ -2,4 +2,4 @@ name: Tawk.to chat
 type: module
 description: 'Provides base intergraton with tawk.to service.'
 core: 8.x
-configure: tawk_to.widget
+configure: tawk_to.index
