Issue #3062146 by alonaoneill: Capitalize the name of the module in .info.yml file

--- a/tawk_to.info.yml
+++ b/tawk_to.info.yml
@@ -1,4 +1,4 @@
-name: Tawk.to chat
+name: Tawk.to - Live Chat Application (Drupal 8)
 type: module
 description: 'Provides base intergraton with tawk.to service.'
 core: 8.x
