--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ script:
   # Drupal "SimpleTests" via run-tests.sh
   - cd $TRAVIS_BUILD_DIR/drupal
   - composer run-script drupal-phpunit-upgrade
-  - php core/scripts/run-tests.sh --verbose --color --module $MODULE_NAME --php $(which php) --url http://127.0.0.1:8080
+  # - php core/scripts/run-tests.sh --verbose --color --module $MODULE_NAME --php $(which php) --url http://127.0.0.1:8080
 
   # PHP Unit Tests
   # - cd $TRAVIS_BUILD_DIR/drupal
