--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
       "role": "Maintainer"
     }
   ],
+  "require": {
+    "php": ">=7.2"
+  },
   "minimum-stability": "dev",
   "support": {
     "issues": "https://www.drupal.org/project/issues/tawk_to",
