--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,12 +1,12 @@
 includes:
-  - ../../vendor/mglaman/phpstan-drupal/extension.neon
-  - ../../vendor/phpstan/phpstan-deprecation-rules/rules.neon
-  - ../../vendor/jangregor/phpstan-prophecy/extension.neon
-  - ../../vendor/phpstan/phpstan-phpunit/extension.neon
+  - ./vendor/mglaman/phpstan-drupal/extension.neon
+  - ./vendor/phpstan/phpstan-deprecation-rules/rules.neon
+  - ./vendor/jangregor/phpstan-prophecy/extension.neon
+  - ./vendor/phpstan/phpstan-phpunit/extension.neon
 parameters:
   # PHPStan cannot find files in this test directory automatically.
   scanDirectories:
-    - ../../core/tests/Drupal/Tests
+    - ./core/tests/Drupal/Tests
   customRulesetUsed: true
   level: 6
   paths:
