--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,11 +27,6 @@ jobs:
           repository: drupal/drupal
           ref: ${{ matrix.drupal-core }}
 
-      - name: Checkout tawk_to module
-        uses: actions/checkout@v2
-        with:
-          path: modules/tawk_to
-
       - name: Setup PHP extension cache
         id: extcache
         uses: shivammathur/cache-extensions@v1
@@ -60,7 +55,9 @@ jobs:
 
       - name: Get composer cache directory
         id: composercache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+        run: |
+          composer config allow-plugins true -n
+          echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Cache composer dependencies
         uses: actions/cache@v2
@@ -73,14 +70,16 @@ jobs:
 
       - name: Install Drupal core dependencies
         run: |
-          composer install --no-progress --prefer-dist --optimize-autoloader
+          composer config allow-plugins true -n
+          composer install --no-progress --no-interaction --prefer-dist --optimize-autoloader
           composer --no-interaction run-script drupal-phpunit-upgrade
 
       - name: Install dependencies
-        run: composer --no-interaction --no-progress require \
+        run: |
+          composer config allow-plugins true -n
+          composer --no-interaction --no-progress require \
           phpstan/phpstan:^0.12.88 \
           mglaman/phpstan-drupal:^0.12.8 \
-          slevomat/coding-standard:^5.0 \
           phpstan/phpstan-deprecation-rules:^0.12.2 \
           jangregor/phpstan-prophecy:^0.8 \
           phpstan/phpstan-phpunit:^0.12
@@ -89,14 +88,28 @@ jobs:
       # Drupal vendor dir.
       - name: Install Coder
         run: |
-          mkdir coder
+          mkdir -p coder
           cd coder
+          composer init --name=coder/coder --no-interaction
+          composer config allow-plugins true -n
           composer require drupal/coder:8.3.12 --no-interaction --no-progress
+
+      # There are issues with act to include checkout inside checkout.
+      - name: Sets composer github token
+        run: |
+          composer config -g github-oauth.github.com ${{ github.token }}
+
+      - name: Install tawk_to module
+        run: |
+          composer config repositories.tawk_to vcs https://github.com/akhomy/tawk_to
+          composer require drupal/tawk_to:3.0.x
 
       - name: Run PHPStan
         run: |
-          cd modules/tawk_to && ../../vendor/bin/phpstan analyse
+          cp modules/contrib/tawk_to/phpstan.neon ./
+          ./vendor/bin/phpstan analyse modules/contrib/tawk_to
+
       - name: Run PHPCS
         run: |
           ./coder/vendor/bin/phpcs --config-set installed_paths ../../drupal/coder/coder_sniffer
-          cd modules/tawk_to && ../../coder/vendor/bin/phpcs -p
+          ./coder/vendor/bin/phpcs --standard=Drupal,DrupalPractice -p modules/contrib/tawk_to
