--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,9 +1,9 @@
 name: Tests
 on:
   push:
-    branches: [ 8.x-2.x ]
+    branches: [ 3.0.x ]
   pull_request:
-    branches: [ 8.x-2.x ]
+    branches: [ 3.0.x ]
 jobs:
   drupal:
     name: Drupal ${{ matrix.drupal-core }} (PHP ${{ matrix.php-versions }})
