--- a/.github/workflows/local.yml
+++ b/.github/workflows/local.yml
@@ -73,7 +73,7 @@ jobs:
           composer config allow-plugins true -n
           composer require drupal/coder:8.3.12 --no-interaction --no-progress
 
-      # There are issues with act to include checkout inside checkout.
+      # There are issues with the act to include checkout inside checkout.
       - name: Sets composer github token
         run: |
           composer config -g github-oauth.github.com ${{ github.token }}
