Update action cache.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -66,7 +66,7 @@ jobs:
           # Use composer.json for key, if composer.lock is not committed.
           # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
+          restore-keys: ${{ runner.os }}-composer-2
 
       - name: Install Drupal core dependencies
         run: |
