--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -65,8 +65,8 @@ jobs:
           path: ${{ steps.composercache.outputs.dir }}
           # Use composer.json for key, if composer.lock is not committed.
           # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-          key: ${{ runner.os }}-composer-2-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-2
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Drupal core dependencies
         run: |
@@ -103,7 +103,7 @@ jobs:
       - name: Install tawk_to module
         run: |
           composer config repositories.tawk_to vcs https://github.com/akhomy/tawk_to
-          composer require drupal/tawk_to:3.0.x
+          composer require drupal/tawk_to:3.0.x-dev
 
       - name: Run PHPUnit
         run: |
