--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,16 +13,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.3', '7.4', '8.0']
-        drupal-core: ['9.2.x']
+        php-versions: ['7.4', '8.0', '8.1']
+        drupal-core: ['9.5.x']
+        phpstan: ['0']
+        drush: ['^10']
         include:
-          # Extra run to also test on latest Drupal 8 and PHP 7.2.
-          - php-versions: '7.2'
-            drupal-core: '8.9.x'
+          # Extra run to also test on Drupal 10.
+          - php-versions: '8.1'
+            drupal-core: '10.0.x'
+            phpstan: '0'
+            drush: '^11'
+          - php-versions: '8.2'
+            drupal-core: '10.0.x'
+            phpstan: '1'
+            drush: '^12'
     steps:
       - run: echo "${{ env.extensions }}"
       - name: Checkout Drupal core
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: drupal/drupal
           ref: ${{ matrix.drupal-core }}
@@ -38,7 +46,7 @@ jobs:
           key: cache-v1
 
       - name: Cache PHP extensions
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ steps.extcache.outputs.dir }}
           key: ${{ steps.extcache.outputs.key }}
@@ -60,7 +68,7 @@ jobs:
           echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Cache composer dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ steps.composercache.outputs.dir }}
           # Use composer.json for key, if composer.lock is not committed.
@@ -70,20 +78,21 @@ jobs:
 
       - name: Install Drupal core dependencies
         run: |
-          composer config allow-plugins true -n
-          composer install --no-progress --no-interaction --prefer-dist --optimize-autoloader
+          composer install --no-progress --prefer-dist --optimize-autoloader
           composer --no-interaction run-script drupal-phpunit-upgrade
+          composer config --no-plugins allow-plugins.phpstan/extension-installer true
 
       - name: Install dependencies
         run: |
           composer config allow-plugins true -n
           composer --no-interaction --no-progress require \
-          phpstan/phpstan:^0.12.88 \
-          mglaman/phpstan-drupal:^0.12.8 \
-          phpstan/phpstan-deprecation-rules:^0.12.2 \
-          jangregor/phpstan-prophecy:^0.8 \
-          phpstan/phpstan-phpunit:^0.12 \
-          drush/drush:^10
+          phpstan/phpstan:^1.7.14 \
+          mglaman/phpstan-drupal:^1.1.2 \
+          phpstan/phpstan-deprecation-rules:^1.0.0 \
+          jangregor/phpstan-prophecy:^1.0.0 \
+          phpstan/phpstan-phpunit:^1.0.0 \
+          phpstan/extension-installer:^1.0 \
+          drush/drush:${{ matrix.drush }}
 
       # We install Coder separately because updating did not work in the local
       # Drupal vendor dir.
@@ -93,7 +102,7 @@ jobs:
           cd coder
           composer init --name=coder/coder --no-interaction
           composer config allow-plugins true -n
-          composer require drupal/coder:8.3.12 --no-interaction --no-progress
+          composer require drupal/coder:8.3.15 --no-interaction --no-progress
 
       # There are issues with act to include checkout inside checkout.
       - name: Sets composer github token
@@ -114,9 +123,8 @@ jobs:
 
       - name: Run PHPStan
         run: |
-          cd modules/contrib/tawk_to && ../../../vendor/bin/phpstan analyse
+          if [[ ${{ matrix.phpstan }} == "1" ]]; then rm vendor/mglaman/phpstan-drupal/stubs/Drupal/Core/Field/FieldItemList.stub && cd modules/contrib/tawk_to && ../../../vendor/bin/phpstan analyse; fi
 
       - name: Run PHPCS
         run: |
-          ./coder/vendor/bin/phpcs --config-set installed_paths ../../drupal/coder/coder_sniffer
           ./coder/vendor/bin/phpcs --standard=Drupal,DrupalPractice -p modules/contrib/tawk_to
