--- a/.github/workflows/local.yml
+++ b/.github/workflows/local.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.4']
+        php-versions: ['7.3', '7.4']
         drupal-core: ['9.5.x']
         phpstan: ['0']
     steps:
