--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0', '8.1']
+        php-versions: ['7.3', '7.4', '8.0', '8.1']
         drupal-core: ['9.5.x']
         phpstan: ['0']
         drush: ['^10']
